--- a/LOGIN FOR GOAL/login.html
+++ b/LOGIN FOR GOAL/login.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="form-container" id="login-section">
       <h2>Login</h2>
-      <form id="login-form">
+      <form action="login.php" method="post" id="login-form">
         <input type="text" name="username" placeholder="Username" required>
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Login</button>
@@ -20,7 +20,7 @@
     </div>
     <div class="form-container hidden" id="signup-section">
       <h2>Sign Up</h2>
-      <form id="signup-form">
+      <form action="login.php" method="post" id="signup-form">
         <input type="text" name="username" placeholder="Username" required>
         <input type="email" name="email" placeholder="Email" required>
         <input type="password" name="password" placeholder="Password" required>
