--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
   <?php session_start(); ?>
 </head>
-<body>
+<body style="background-image: url('https://adore.simtrak.in/data/sys/bg.jpg');background-repeat: no-repeat; background-attachment: fixed; background-size: cover;">
   <h1> <center>GOAL MANAGEMENT SYSTEM</center></h1>
   <div class="container">
     <div class="form-container" id="login-section">
